--- a/css/site.css
+++ b/css/site.css
@@ -7,6 +7,7 @@ body {
 .col-md-4 h3 {
     font-size: 1.5em;
     text-decoration: underline;
+    font-family: 'Raleway';
 }
 
 h4 {
@@ -16,6 +17,7 @@ h4 {
 }
 
 .col-xs-6 h4 {
+    font-family: 'Raleway';
     font-size: 1.2em;
     color: #000000;
     /*    color: #414174;*/
@@ -23,6 +25,11 @@ h4 {
 
 .col-md-6 h4 {
     color: #000000;
+}
+
+.smaller {
+    font-family: 'Raleway';
+    text-align: justify;
 }
 
 #header {
